...
                    expanded = expandedResult,
                    onExpandedChange = onExpandedChange,
                    placeholder = {
                        Text(text = stringResource(R.string.search_place_holder))
                    },
                    modifier = Modifier
                        .testTag("search_bar_input"),
                    trailingIcon = if (state.isLoading) {
                        {
                            CircularProgressIndicator(
                                modifier = Modifier
                                    .size(25.dp)
                            )
                        }
                    } else null
                )
            },
            modifier = Modifier
                .testTag("search_bar")
        )
    }
}

@Composable
private fun ResultContent(
...
