...
            temp = data.current.tempC.roundToInt().toString(),
            tempMin = dayInfo.minTempC.roundToInt().toString(),
            tempMax = dayInfo.maxTempC.roundToInt().toString(),
            condition = data.current.condition.text,
            maxLinesCondition = if (isCompactLandscape) 1 else 2,
            modifier = Modifier
                .testTag("current_weather_component")
        )
        if (!isCompactLandscape) {
            Spacer(modifier = Modifier.height(20.dp))

            Text(
                text = stringResource(R.string.weather_info_forecast_hour),
...
